--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  width: 100vw;
+  height: 100vh;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#root {
+  width: 90vw;
+  height: 90vh;
+  min-width: 710px;
+  background-color: #161616;
+  display: flex;
+  flex-direction: row;
+}
+
+.nav-panel {
+  width: 10vw;
+  height: 90vh;
+  display: flex;
+  min-width: 110px;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.nav-inner-div {
+  width: 10vw;
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.nav-button {
+  width: 100px;
+  height: 50px;
+  padding-top: 30px;
+  border: 1px solid white;
+  text-align: center;
+  color: white;
+  font-family: monospace;
+  font-size: large;
+  margin: 0 auto;
+}
+
+.nav-button:hover {
+  cursor: pointer;
+  border: 3px solid white;
+}
+
+.nav-button a {
+  text-decoration: none;
+  color: white;
+}
+
+.main-panel {
+  width: 80vw;
+  height: 90vh;
+  min-width: 600px;
+  background-color: #2F2E2E;
+  display: flex;
+  flex-direction: column;
 }
