--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-color: #000000;
+  background-color: #FFFFFF;
   display: flex;
   justify-content: center;
   align-items: center;
